correct alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -89,18 +89,5 @@ body {
     color: #0056b3; /* Azul mais escuro no hover */
 }
 
-.logo-circle {
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 50%;
-}
-
-.logo-text {
-    font-weight: bold;
-    color: #0f8df5;
-    font-size: 18px;
-}
-
 
 
